compiler/tools/fpp-check/test/struct/format_alias_not_numeric.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/struct/format_alias_not_numeric.fpp:3.25
struct S2 { x: T format "{.3f}" }
                        ^
error: invalid format string: T is not a floating-point type
